<resources>
    <string name="app_name">Pinvoke</string>
    <string name="credit_card_widget">Credit Card Widget</string>
    <string name="track_your_credit_card_due_dates">Track your credit card due dates with a beautiful, modern widget.</string>
    <string name="add_widget_to_home_screen">Add Widget</string>
    <string name="add_widget_instructions">Long press on your home screen and select \'Widgets\' to add a new credit card widget.</string>
    <string name="configure_your_credit_cards">Configure Cards</string>
    <string name="add_your_credit_cards_and_due_dates">Add or remove credit cards and set their due dates.</string>
    <string name="your_cards">Your Cards</string>
    <string name="save_widget">Save Widget</string>
    <string name="add_card">Add Card</string>
    <string name="card_details">Card Details</string>
    <string name="remove_card">Remove Card</string>
    <string name="card_name_hint">Card Name (e.g., Chase Sapphire)</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="credit_card">Credit Card</string>
    <string name="days">days</string>
    <string name="overdue">OVERDUE</string>
    <string name="today">TODAY</string>
    <string name="saving">Saving...</string>
    <string name="configure_widget">Configure Widget</string>
    <string name="due_date_button_text">Due: %s</string>
    <string name="error_saving_configuration">Failed to save configuration.</string>
    <string name="at_least_one_card">At least one card is required.</string>
    <string name="max_cards_allowed">Maximum %d cards allowed.</string>
    <string name="please_add_at_least_one_card">Please add at least one card.</string>
    <string name="long_press_on_home_screen_and_select_widgets">Long press on home screen and select \'Widgets\' to add the Credit Card Widget.</string>
    <string name="bill_due_message">Your %s bill is due today!</string>
    <string name="alarm_reminder_label">Set Bill Reminder</string>
    <string name="manage_cards">Manage Cards</string>
</resources>